src/objects/Event_Details__mdt.object
<CustomObject>
    <fields>
        <fullName>BST_BAX_SALES_TEAM__c</fullName>
        <description>This tracks the default value for Event type per record type</description>
        <label>Event Type Default Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_CALL_TYPE__c</fullName>
        <description>Field tracks possible values for Event Type per record type</description>
        <label>Event Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_MAIN_TOPIC__c</fullName>
        <description>This field tracks the Main Topic from Event</description>
        <label>Main Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <label>Record Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Field Customer Calls</fullName>
                </value>
                <value>
                    <fullName>Non Field Customer Activity</fullName>
                </value>
                <value>
                    <fullName>Field Training Activity</fullName>
                </value>
                <value>
                    <fullName>Internal/ Non-Customer Activity</fullName>
                </value>
                <value>
                    <fullName>Visite commerciale sur le terrain</fullName>
                </value>
                <value>
                    <fullName>Activité interneon commerciale</fullName>
                </value>
                <value>
                    <fullName>Activités commerciales hors terrain</fullName>
                </value>
                <value>
                    <fullName>Formation fournie</fullName>
                </value>
                <value>
                    <fullName>Müşteri Ziyaret Alanı</fullName>
                </value>
                <value>
                    <fullName>Saha Eğitim Faaliyetleri</fullName>
                </value>
                <value>
                    <fullName>Şirket içi Etkinlik</fullName>
                </value>
                <value>
                    <fullName>Alan Dışı Müşteri Aktivitesi</fullName>
                </value>
                <value>
                    <fullName>Field Sales Calls</fullName>
                    <isActive>false</isActive>
                    <label>Field Sales Calls</label>
                </value>
                <value>
                    <fullName>Internal/ Non-Sales Activity</fullName>
                    <isActive>false</isActive>
                    <label>Internal/ Non-Sales Activity</label>
                </value>
                <value>
                    <fullName>Non Field Sales Activity</fullName>
                    <isActive>false</isActive>
                    <label>Non Field Sales Activity</label>
                </value>
                <value>
                    <fullName>Training Provided</fullName>
                    <isActive>false</isActive>
                    <label>Training Provided</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Details</label>
    <pluralLabel>Event Details</pluralLabel>
</CustomObject>